--- a/Index.html
+++ b/Index.html
@@ -7,19 +7,59 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css">
 
     <title>Weather App</title>
   </head>
   <body>
-    
+    <!--Title-->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Weather DashBoard</h1>
+          <p class="lead"> Local Weather Information!</p>
+        </div>
+      </div>
+
+    <!-- Search form -->
+<form class="form-inline md-form form-sm search">
+    <input class="form-control form-control-sm mr-3 w-75 cities" type="text" placeholder="Search"
+      aria-label="Search">
+    <i class="fas fa-search" aria-hidden="true"></i>
+  </form>
+    <!--putting my search history here-->
+      <ul class="searchHistory">
+        <li class="list-group-item">example</li>
+      </ul>
+
+      <!--where my information of city will show!-->
+      <div id="cityTitle"></div>
+      <div id="cityTemperature"></div>
+      <div id="cityHumidity"></div>
+      <div id="cityWindspeed"></div>
+      <div id="UVindex"></div>
+
+      <!--showing my five day forcast-->
+    <div></div>
+
+
+
+
+
 
     <!-- Optional JavaScript -->
-    <script src="code.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="code.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
+
   </body>
 </html>
