--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
       <label class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
           <input type="text" class="form-control"
-          id="toDestination" placeholder="please Enter City,State">
+          id="toDestination" placeholder="City,State">
           <button type="button" class="btn btn-lg btn btn-city">Enter</button>
         </div>
      </div>
