--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,12 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/363416430c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
     <title>Weather App</title>
   </head>
-  <body>
+  <body onload="getCity()">
     <!--Title-->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -28,24 +29,25 @@
 
     <!-- Search form -->
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
           <input type="text" class="form-control"
           id="toDestination" placeholder="City,State">
-          <button type="button" class="btn btn-lg btn btn-city">Enter</button>
+          <button type="button" class="btn btn-lg btn btn-city" class="save" onclick="sayCity()"><i class="fas fa-sun"> Enter</i></button>
         </div>
      </div>
     <!--putting my search history here-->
       <ul class="searchHistory">
-        <li class="list-group-item"></li>
+        <li class="list-group-item" id="firstCity"></li>
       </ul>
 
       <!--where my information of city will show!-->
+      <div id="info">
       <div id="cityTitle"></div>
       <div id="cityTemperature"></div>
       <div id="cityHumidity"></div>
       <div id="cityWindspeed"></div>
       <div id="UVindex"></div>
+    </div>
 
       <!--showing my five day forcast-->
     <div id="fiveDayCast"></div>
