added css style

--- a/Index.html
+++ b/Index.html
@@ -37,6 +37,7 @@
      </div>
     <!--putting my search history here-->
       <ul class="searchHistory">
+        <p>Search History</p>
         <li class="list-group-item" id="firstCity"></li>
       </ul>
 
@@ -50,7 +51,45 @@
     </div>
 
       <!--showing my five day forcast-->
-    <div id="fiveDayCast"></div>
+    <div id="fiveDayCast">
+      <div class="card-group">
+        <div class="card">
+          <img class="card-img-top" src="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">blank</p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">blank</p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">blank</p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">blank.</p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">blank</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
 
