--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
     <!--putting my search history here-->
       <ul class="searchHistory">
         <p>Search History</p>
-        <li class="list-group-item" id="firstCity"></li>
+        <li class="list-group-item" id="cityHistory"></li>
       </ul>
 
       <!--where my information of city will show!-->
@@ -54,18 +54,20 @@
 
       <!--showing my five day forcast-->
     <div id="fiveDayCast">
-      <div class="card-group">
+      <div class="card-group" class="hide">
         <div class="card">
           <div class="card-body">
+            <div class="tempIconOne">
             <h5 class="card-titleOne"></h5>
             <p class="card-temp"></p>
             <p class="card-humidity"></p>
           </div>
-        </div>
+      </div>
+    </div>
 
         <div class="card">
-
           <div class="card-body">
+            <div class="tempIconTwo"></div>
             <h5 class="card-titleTwo"></h5>
             <p class="card-tempTwo"></p>
             <p class="card-humidityTwo"></p>
@@ -74,6 +76,7 @@
 
         <div class="card">
           <div class="card-body">
+            <div class="tempIconThree"></div>
             <h5 class="card-titleThree"></h5>
             <p class="card-tempThree"></p>
             <p class="card-humidityThree"></p>
@@ -82,6 +85,7 @@
 
         <div class="card">
           <div class="card-body">
+            <div class="tempIconFour"></div>
             <h5 class="card-titleFour"></h5>
             <p class="card-tempFour"></p>
             <p class="card-humidityFour"></p>
@@ -90,6 +94,7 @@
 
         <div class="card">
           <div class="card-body">
+            <div class="tempIconFive"></div>
             <h5 class="card-titleFive"></h5>
             <p class="card-tempFive"></p>
             <p class="card-humidityFive"></p>
